--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
     },
     "config": {
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.1.22"
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
