--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
     "require": {
         "php": "^7.4|^8.0",
         "phpoffice/phpspreadsheet": "^1.29",
+        "smalot/pdfparser": "^0.16",
+        "phpoffice/phpword": "^1.1",
         "ext-pdo": "*",
         "ext-json": "*",
         "ext-curl": "*",
